--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </a>
 
             <a 
-                href="YOUR_GOOGLE_DRIVE_CV_LINK" 
+                href="https://drive.google.com/file/d/1Gly_7IIF4myRElm4bp1mIvZ7iQm6RG_6/view?usp=drive_link" 
                 target="_blank" 
                 aria-label="Download CV"
                 class="icon-link text-gray-400 hover:text-red-500 transition duration-300 transform hover:scale-105"
@@ -79,4 +79,5 @@
     </div>
 
 </body>
+
 </html>
